<resources>
    <string name="app_name">Kvaldarbs</string>
    <string name="login_screen"><u>REGISTER</u></string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="email">Email</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_screen_pending">main screen pending</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="confirm_order">CONFIRM ORDER</string>
    <string name="question_confirm_order">Do you wish to order this?</string>
    <string name="unassigned">UNASSIGNED MESSAGE</string>
    <string name="order_confirmed">ORDER CONFIRMED!</string>
    <string name="order_confirmed_message">You will soon receive the contacts of the offerer!</string>
    <string name="log_out">Log out</string>
    <string name="title_activity_offer_flow_screen">OfferFlowScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="order">ORDER</string>
    <string name="offer_title">Offer Title</string>
    <string name="product_type">Product Type</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="weight">Weight (kg)</string>
    <string name="delivery">Delivery</string>
    <string name="location">Location</string>
    <string name="wear">Wear</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="white_dinner_table">White dinner table</string>
    <string name="_15_kg">15 kg</string>
    <string name="iekurs">Čiekurs</string>
    <string name="_1">1</string>
    <string name="hint_text_offer_form">White dinner table, minimalist style. The table has been used before but has no visible scuff marks. Easy to assemble and set up.</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="recently_added_images">Recently added images</string>
    <string name="browse_device">Browse device…</string>
    <string name="take_picture">Take picture</string>
    <string name="_0_10">0/10</string>
    <string name="placeholder_offer_text">Set of 8 BILLY bookcases with GRYTNAS glass doors. Good for the living room for displaying and storing books and different design knick knacks.</string>
    <string name="placeholder">Placeholder</string>
    <string name="placeholder_title">Placeholder title</string>
    <string name="images_of_the_items_being_offered">Images of the items being offered</string>
    <string name="confirm_offer">CONFIRM OFFER</string>
    <string name="confirm_offer_text">Do you wish to offer this?</string>
    <string name="offer_confirmed">OFFER CONFIRMED!</string>
    <string name="offer_confirmed_text">Your offer will soon be visible in the app!</string>
    <string name="offer">OFFER</string>
    <string name="ok">OK</string>
    <string name="yes">YES</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="select_image">SELECT IMAGE</string>
    <string name="image_from_the_camera">Image from the camera</string>
    <string name="take_photo">TAKE PHOTO</string>
    <string name="navigation_drawer_open">open nav drawer</string>
    <string name="navigation_drawer_close">close nav drawer</string>
    <string name="phone">Phone</string>
    <string name="create_account">create account</string>
    <string name="product_images">Product images</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="delete_profile">Delete profile</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="pencil_image">Pencil image</string>
    <string name="confirm_account_deletion">CONFIRM ACCOUNT DELETION</string>
    <string name="delete_account">Do you wish to delete your account?</string>
    <string name="height_cm">Height (cm)</string>
    <string name="_30_cm">30 cm</string>
    <string name="width_cm">Width (cm)</string>
    <string name="length_cm">Length (cm)</string>
    <string name="_15_cm">15 cm</string>
    <string name="_10_cm">10 cm</string>
    <string name="wood">Wood</string>
    <string name="white">White</string>
    <string name="an_lavs_egl_tis">Anšlavs Eglītis</string>
    <string name="_1992">1992</string>
    <string name="piecas_dienas">Piecas Dienas</string>
    <string name="rai_a_bulv_ris_19">Raiņa Bulvāris 19</string>
    <string name="height">Height</string>
    <string name="length">Length</string>
    <string name="material">Material</string>
    <string name="color">Color</string>
    <string name="author">Author</string>
    <string name="year">Year</string>
    <string name="book_title">Book Title</string>
    <string name="size">Size</string>
    <string name="width">Width</string>
    <string name="reauth">USER RE-AUTHENTICATION</string>
    <string name="auccount_delete">Please re-authenticate to delete user account.</string>
    <string name="account_edit">Please re-authenticate to change user settings.</string>
    <string name="confirm_order_delivery">Confirm order delivery</string>
    <string name="profile_icon">profile icon</string>
    <string name="image_error">There should be 1 to 10 attached images.</string>
    <string name="admin_critic_hint">The title should clearly display what item is being sold. Instead of \'Book about 1940s\', title the offer using the name and author.</string>
    <string name="visibility_change">VISIBILITY CHANGE</string>
    <string name="visibility_change_content">Please provide the reason for changing the visibility of this offer.</string>
    <string name="delete_offer">DELETE OFFER</string>
    <string name="delete_offer_content">Are you sure you want to delete this offer?</string>
    <string name="images_of_the_product">images of the product</string>
    <string name="visibility_change_invis">Are you sure you want to make the offer invisible?</string>
    <string name="visibility_change_vis">Are you sure you want to make the offer visible?</string>
    <string name="finish_editing">Finish editing</string>
    <string name="change_visibility">Change visibility</string>
    <string name="edit_product">Edit product</string>
    <string name="the_visibility_of_your_product_has_been_changed_by_an_administrator">THE VISIBILITY OF YOUR PRODUCT HAS BEEN CHANGED BY AN ADMINISTRATOR:</string>
    <string name="change_password">Change password</string>
    <string name="reset_password">Reset password</string>
    <string name="switch_camera_button">Switch camera button</string>
    <string name="take_picture_button">take picture button</string>
    <string name="password_reset">PASSWORD RESET</string>
    <string-array name="product_type_array">
        <item>Book</item>
        <item>Furniture</item>
        <item>Decorations</item>
    </string-array>
    <string-array name="delivery_array">
        <item>Pickup From Location</item>
        <item>Delivery To Orderer</item>
    </string-array>
    <string-array name="wear_array">
        <item>Unused</item>
        <item>No Signs Of Wear</item>
        <item>Light Scuff Marks</item>
        <item>Medium Scuff Marks</item>
        <item>Heavily Used, Functional</item>
    </string-array>
    <string-array name="size_array">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
</resources>