<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    tools:layout_editor_absoluteX="187dp"
    tools:layout_editor_absoluteY="294dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".orderflow.DetailFragment">


        <TextView
            android:id="@+id/titleLabel"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:gravity="start|center"
            android:text="@string/offer_title"
            android:textColor="@color/darkest_black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_toolbar" />


        <TextView
            android:id="@+id/manufLabel"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:gravity="start|center"
            android:text="@string/manufacturer"
            android:textColor="@color/darkest_black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/titleLabel"
            app:layout_constraintTop_toBottomOf="@+id/titleLabel" />


        <TextView
            android:id="@+id/deliveryLabel"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:gravity="start|center"
            android:text="@string/delivery"
            android:textColor="@color/darkest_black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/manufLabel"
            app:layout_constraintTop_toBottomOf="@+id/manufLabel" />

        <TextView
            android:id="@+id/locationLabel"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:gravity="start|center"
            android:text="@string/location"
            android:textColor="@color/darkest_black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/amountLabel"
            app:layout_constraintTop_toBottomOf="@+id/amountLabel" />

        <TextView
            android:id="@+id/amountLabel"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:gravity="start|center"
            android:text="@string/amount"
            android:textColor="@color/darkest_black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/deliveryLabel"
            app:layout_constraintTop_toBottomOf="@+id/deliveryLabel" />

        <TextView
            android:id="@+id/weightLabel"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:gravity="start|center"
            android:text="@string/weight"
            android:textColor="@color/darkest_black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/locationLabel"
            app:layout_constraintTop_toBottomOf="@+id/locationLabel" />

        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:gravity="start|center"
            android:text="@string/description"
            android:textColor="@color/darkest_black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/sizeLabel"
            app:layout_constraintTop_toBottomOf="@+id/sizeLabel" />

        <TextView
            android:id="@+id/blankGridSupoort"
            android:layout_width="wrap_content"
            android:layout_height="45dp"

            android:layout_marginTop="16dp"
            android:textColor="@color/darkest_black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/sizeDropdown"
            app:layout_constraintTop_toBottomOf="@+id/sizeDropdown"
            tools:ignore="DuplicateIds" />


        <EditText
            android:id="@+id/titleField"
            android:layout_width="206dp"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/white_dinner_table"
            android:inputType="textPersonName"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toEndOf="@+id/titleLabel"
            app:layout_constraintTop_toBottomOf="@+id/profile_toolbar"
            android:autofillHints="title" />

        <EditText
            android:id="@+id/manufacturerField"
            android:layout_width="205dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/iekurs"
            android:inputType="textPersonName"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/titleField"
            app:layout_constraintTop_toBottomOf="@+id/titleField"
            android:autofillHints="manufacturer" />

        <Spinner
            android:id="@+id/deliveryDropdown"
            android:layout_width="205dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/border"
            app:layout_constraintStart_toStartOf="@+id/manufacturerField"
            app:layout_constraintTop_toBottomOf="@+id/manufacturerField" />

        <TextView
            android:id="@+id/amountNumberText"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"

            android:background="@drawable/border"
            android:gravity="center|start"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/editPlusButton"
            app:layout_constraintStart_toEndOf="@+id/editMinusButton"
            app:layout_constraintTop_toBottomOf="@+id/deliveryDropdown" />


        <EditText
            android:id="@+id/weightField"
            android:layout_width="205dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/_15_kg"
            android:inputType="number"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/locationField"
            app:layout_constraintTop_toBottomOf="@+id/locationField"
            android:autofillHints="number" />

        <EditText
            android:id="@+id/descriptionField"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/border"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/hint_text_offer_form"
            android:includeFontPadding="true"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/descriptionLabel"
            app:layout_constraintTop_toBottomOf="@+id/blankGridSupoort"
            android:autofillHints="description" />

        <Button
            android:id="@+id/editPlusButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button"
            android:text="@string/plus"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="@+id/deliveryDropdown"
            app:layout_constraintTop_toBottomOf="@+id/deliveryDropdown" />

        <Button
            android:id="@+id/editMinusButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button"
            android:text="@string/minus"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="@+id/deliveryDropdown"
            app:layout_constraintTop_toBottomOf="@+id/deliveryDropdown" />


        <TextView
            android:id="@+id/heightLabel"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:gravity="start|center"
            android:text="@string/height_cm"
            android:textColor="@color/darkest_black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/weightLabel"
            app:layout_constraintTop_toBottomOf="@+id/weightLabel" />

        <EditText
            android:id="@+id/heightField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/_30_cm"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="@+id/weightField"
            app:layout_constraintTop_toBottomOf="@+id/weightField"
            android:autofillHints="number" />

        <TextView
            android:id="@+id/widthLabel"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:gravity="start|center"
            android:text="@string/width_cm"
            android:textColor="@color/darkest_black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/heightLabel"
            app:layout_constraintTop_toBottomOf="@+id/heightLabel" />

        <TextView
            android:id="@+id/lengthLabel"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:gravity="start|center"
            android:text="@string/length_cm"
            android:textColor="@color/darkest_black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/widthLabel"
            app:layout_constraintTop_toBottomOf="@+id/widthLabel" />

        <TextView
            android:id="@+id/materialLabel"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:gravity="start|center"
            android:text="@string/material"
            android:textColor="@color/darkest_black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/lengthLabel"
            app:layout_constraintTop_toBottomOf="@+id/lengthLabel" />

        <TextView
            android:id="@+id/colorLabel"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:gravity="start|center"
            android:text="@string/color"
            android:textColor="@color/darkest_black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/materialLabel"
            app:layout_constraintTop_toBottomOf="@+id/materialLabel" />

        <TextView
            android:id="@+id/authorLabel"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:gravity="start|center"
            android:text="@string/author"
            android:textColor="@color/darkest_black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/colorLabel"
            app:layout_constraintTop_toBottomOf="@+id/colorLabel" />

        <TextView
            android:id="@+id/yearLabel"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:gravity="start|center"
            android:text="@string/year"
            android:textColor="@color/darkest_black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/authorLabel"
            app:layout_constraintTop_toBottomOf="@+id/authorLabel" />

        <TextView
            android:id="@+id/bookTitleLabel"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:gravity="start|center"
            android:text="@string/book_title"
            android:textColor="@color/darkest_black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/yearLabel"
            app:layout_constraintTop_toBottomOf="@+id/yearLabel" />

        <TextView
            android:id="@+id/sizeLabel"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:gravity="start|center"
            android:text="@string/size"
            android:textColor="@color/darkest_black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/bookTitleLabel"
            app:layout_constraintTop_toBottomOf="@+id/bookTitleLabel" />

        <EditText
            android:id="@+id/widthField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/_15_cm"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="@+id/heightField"
            app:layout_constraintTop_toBottomOf="@+id/heightField"
            android:autofillHints="number" />

        <EditText
            android:id="@+id/lengthField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/_10_cm"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="@+id/widthField"
            app:layout_constraintTop_toBottomOf="@+id/widthField"
            android:autofillHints="number" />

        <EditText
            android:id="@+id/materialField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/wood"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/lengthField"
            app:layout_constraintTop_toBottomOf="@+id/lengthField"
            android:autofillHints="material" />

        <EditText
            android:id="@+id/colorField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/white"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/materialField"
            app:layout_constraintTop_toBottomOf="@+id/materialField"
            android:autofillHints="color" />

        <EditText
            android:id="@+id/authorField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/an_lavs_egl_tis"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/colorField"
            app:layout_constraintTop_toBottomOf="@+id/colorField"
            android:autofillHints="author" />

        <EditText
            android:id="@+id/yearField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/_1992"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="@+id/authorField"
            app:layout_constraintTop_toBottomOf="@+id/authorField"
            android:autofillHints="year" />

        <EditText
            android:id="@+id/bookTitleField"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/piecas_dienas"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/yearField"
            app:layout_constraintTop_toBottomOf="@+id/yearField"
            android:autofillHints="title" />

        <Spinner
            android:id="@+id/sizeDropdown"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/border"
            app:layout_constraintStart_toStartOf="@+id/bookTitleField"
            app:layout_constraintTop_toBottomOf="@+id/bookTitleField" />

        <EditText
            android:id="@+id/locationField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/rai_a_bulv_ris_19"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/editMinusButton"
            app:layout_constraintTop_toBottomOf="@+id/amountNumberText"
            android:autofillHints="location" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/profile_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="16dp" />

        <Button
            android:id="@+id/finishEditingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/edit_button"
            android:text="@string/finish_editing"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionField" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>