<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.ProfileFragment">


    <Button
        android:id="@+id/deleteProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/warning_button"
        android:textColor="@color/white"
        android:text="@string/delete_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



    <TextView
        android:id="@+id/editProfileLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/edit_profile"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/editProfileImage"
        android:layout_width="26dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/pencil"
        app:layout_constraintStart_toEndOf="@+id/editProfileLabel"
        app:layout_constraintTop_toTopOf="@+id/editProfileLabel"
        android:contentDescription="@string/pencil_image" />
</androidx.constraintlayout.widget.ConstraintLayout>