<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/furniturebackgroundcut">

    <View
        android:id="@+id/bgcard"
        android:layout_width="300dp"
        android:layout_height="350dp"
        android:background="@drawable/login_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.385" />

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="197dp"
        android:text="@string/email"
        android:textColor="@color/darkest_black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/bgcard"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/bgcard"
        app:layout_constraintTop_toTopOf="@+id/bgcard" />

    <TextView
        android:id="@+id/PasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="197dp"
        android:text="@string/password"
        android:textColor="@color/darkest_black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/bgcard"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/bgcard"
        app:layout_constraintTop_toBottomOf="@+id/emailField" />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="14"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/emailLabel"
        app:layout_constraintTop_toBottomOf="@+id/emailLabel"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="14"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/PasswordLabel"
        app:layout_constraintTop_toBottomOf="@+id/PasswordLabel"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/logInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="108dp"
        android:background="@drawable/button"
        android:text="@string/log_in"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/bgcard"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/bgcard"
        app:layout_constraintTop_toBottomOf="@+id/passwordField" />

    <TextView
        android:id="@+id/dontHaveAccountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/light_text_2"
        app:layout_constraintBottom_toTopOf="@+id/registerLabel"
        app:layout_constraintEnd_toEndOf="@+id/bgcard"
        app:layout_constraintStart_toStartOf="@+id/bgcard" />

    <TextView
        android:id="@+id/registerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClick"
        android:text="@string/login_screen"
        android:textColor="@color/darkest_black"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/bgcard"
        app:layout_constraintEnd_toEndOf="@+id/bgcard"
        app:layout_constraintStart_toStartOf="@+id/bgcard" />

</androidx.constraintlayout.widget.ConstraintLayout>